Ensure aria-live=off obeyed when nested in aria-live=polite|assertive

Bug: 653921
Change-Id: Ie776065fa67874bdd63a430f3fba7b691107f270
Reviewed-on: https://chromium-review.googlesource.com/c/1380994
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618579}
Former-commit-id: 44fa21a11f62aafee9ec3376ace546cbd5d83281